--- a/css/style.css
+++ b/css/style.css
@@ -197,8 +197,8 @@ color: #000000;
   url(../images/hero-bg.jpg);
   background-repeat: no-repeat;
   background-size: cover;
+  background-position: center;
   max-width: 1600px;
-  text-align: center;
 }
 
 .hero-title{font-weight: 900;
@@ -266,13 +266,12 @@ color: var(--main-text-color);
 .after-title-icon{
 display: flex;
 width: 100%;
-height: 100%;
 align-items: center;
 justify-content: center;
 margin-bottom: 30px;
 background-color: #F5F4FA;
 border-radius: 4px;
-padding: 25px 100px 25px 100px;
+height: 120px;
 }
 
 /* -----------------------ABOUT--------------------- */
@@ -317,7 +316,7 @@ color: var(--second-text-color);
 .team-item{
 text-align: center;
 padding-top: 30px;
-padding-bottom: 10px;
+padding-bottom: 30px;
 }
 
 .team-name{
@@ -346,8 +345,9 @@ color: var(--main-text-color);
 }
 
 .team-social-item{
-  width: 44px;
-  height: 44px;
+width: 44px;
+height: 44px;
+border-radius: 50%;
 }
 
 .team-social-item + .team-social-item{
@@ -357,25 +357,22 @@ color: var(--main-text-color);
 .team-social-link{
   width: 100%;
   height: 100%;
-  border-radius: 50%;
   display: flex;
   align-items: center;
   justify-content: center;
-}
+  border-radius: 50%;
+  color: #AFB1B8;
+  outline: none;
+  }
 
 .team-social-icon{
-  fill: #AFB1B8;
+  fill:currentColor
 }
 
 .team-social-link:hover,
-.team-social-link:focus
-.current{
- background-color: #2196F3;
- }
-
-.team-social-link:hover .team-social-icon,
-.team-social-link:focus .team-social-icon{
-  fill: #ffffff;
+.team-social-link:focus{
+  background-color: #2196F3;
+  color:#ffffff;
 }
 
 /* -----------------------CLIENTS--------------------- */
@@ -401,7 +398,6 @@ border: 1px solid #AFB1B8;
 box-sizing: border-box;
 border-radius:4px;
 fill:#AFB1B8;
-background-color :#E5E5E5;
 display: flex;
 justify-content: center;
 align-items: center;
@@ -525,22 +521,20 @@ color: var(--third-text-color);
   align-items: center;
   justify-content: center;
   background-color:rgba(255, 255, 255, 0.1);
+  color: #ffffff;
+  outline: none;
 }
 
 .footer-social-icon{
-  fill: #ffffff;
+  fill:currentColor;
 }
 
 .footer-social-link:hover,
-.footer-social-link:focus
-.current{
- background-color: #2196F3;
- }
-
-.footer-social-link:hover .team-social-icon,
-.footer-social-link:focus .team-social-icon{
-  fill: #ffffff;
+.footer-social-link:focus{
+  background-color: #2196F3;
+  color:#ffffff;
 }
+
 
 /* -----------------------PORTFOLIO<--------------------- */
 
